# REA

./: app.py  pyproject.toml
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py
config/: agent.yaml  neo4j.yaml
model/: factory.py
rag/: rag_service.py  vector_store.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
