[project]
name = "agent-item"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.7.0",
    "langchain-ollama>=1.0.1",
    "streamlit>=1.55.0",
]
